--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,13 +1,15 @@
 {
     "suggest.noselect": false,
     "languageserver": {
-        "golang": {
+        "go": {
             "command": "gopls",
-            "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
-            "filetypes": ["go"],
-            "initializationOptions": {
-                "usePlaceholders": true
-            }
+            "rootPatterns": [
+                "go.mod"
+            ],
+            "trace.server": "verbose",
+            "filetypes": [
+                "go"
+            ]
         }
     }
 }
